MonetDB/src/mal/Tests/tst005.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
#	r:=0;
#	l:= r < 1;
#barrier l;
#	r:= r+1;
#	l:= false;
#	redo l;
#end l;
#
!ERROR: label 'l' is readonly in main[5]
function Admin.main():int; #0:(main:int)
    r := 0; #1:(r:int)<-($2:int)
    l := calc.<(r,1); #2:(l:bit)<-(r:int)($4:int)
barrier l; #3:(l:bit) jump 8
    r := calc.+(r,1); #4:(r:int)<-(r:int)($4:int)
    l := false; #5:(l:bit)<-($5:bit)
    redo l ; #6:(l:bit) jump 3
end l; #7:(l:bit)
end function; #8:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>